--- a/index.html
+++ b/index.html
@@ -35,5 +35,27 @@
         this is a placeholder for an image
     </div>
    </section>
+
+   <section >
+        <h1 id="infoh1"> Some random information.</h1>
+        <div class="information" >
+            <div class="minicards">
+                <img>
+                <p> this is some subtext under an illustation or image</p>
+            </div>
+            <div class="minicards"> 
+                <img>
+                <p>this is some subtext uder an illustation or image</p>
+            </div>
+            <div class="minicards">
+                <img>
+                <p>this is some subtext uder an illustation or image</p>
+            </div>
+            <div class="minicards">
+                <img>
+                <p>this is some subtext uder an illustation or image</p>
+            </div>
+        </div>
+   </section>
 </body>
 </html>
