--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                 <p>this is some subtext uder an illustation or image</p>
             </div>
         </div>
+   </section >
+
+   <section class="quote">
+    <div class="quotecontent">
+        <p>
+            <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+        </p>
+        <span><strong>-Thor, God of Thunder</strong></span>
+    </div>
    </section>
 </body>
 </html>
