final version of landing page including the final version of quote's section, call to action's section and the footer

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-   <nav>
+   <nav class="navigation">
     <ul class="left-list">
         <li id="logo">Header Logo</li>
     </ul>
@@ -23,7 +23,7 @@
         <li> header link three</li>
     </ul>
    </nav>
-   <section class="hero">
+    <section class="hero">
     <div class="card">
         <h1> This website is awseome</h1>
         <p> this website has some subtext that goes here under
@@ -66,5 +66,18 @@
         <span><strong>-Thor, God of Thunder</strong></span>
     </div>
    </section>
+
+   <section class="call">
+    <div class="callcard">
+        <div>
+            <h1>Call to action! It's time!</h1>
+        <p> Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button> Sign up</button>
+    </div>
+   </section>
+   <footer>
+        Copyright &copy The Odin Project 2021
+   </footer> 
 </body>
 </html>
