some modifications for redering things for flexible

--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
    </section >
 
    <section class="quote">
-    <div class="quotecontent">
+    <div class="quote2" >
         <p>
             <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
         </p>
-        <span><strong>-Thor, God of Thunder</strong></span>
+        <span class="quotecontent"><strong>-Thor, God of Thunder</strong></span>
     </div>
    </section>
 
@@ -71,13 +71,14 @@
     <div class="callcard">
         <div>
             <h1>Call to action! It's time!</h1>
-        <p> Sign up for our product by clicking that button right over there!</p>
+            <p> Sign up for our product by clicking that button right over there!</p>
         </div>
         <button> Sign up</button>
     </div>
    </section>
+
    <footer>
-        Copyright &copy The Odin Project 2021
+        Copyright  &copy  The Odin Project 2021
    </footer> 
 </body>
 </html>
